--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,16 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="Text_title_style">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+    <style name="details_text_style">
+        <item name="android:textStyle">italic</item>
+    </style>
+    <style name="details_text_style2" parent="details_text_style">
+        <item name="android:textAlignment">center</item>
+    </style>
 
 </resources>
