--- a/app/src/main/res/layout/estate_fragment_item.xml
+++ b/app/src/main/res/layout/estate_fragment_item.xml
@@ -6,60 +6,67 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/list_image"
-        android:layout_width="160dp"
-        android:layout_height="147dp"
-        android:layout_weight="1"
-        android:scaleType="fitXY"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/pict3" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/list_type_text"
-        android:layout_width="269dp"
-        android:layout_height="42dp"
-        android:layout_margin="@dimen/text_margin"
-        android:layout_weight="1"
-        android:text="Duplex"
-        android:textAppearance="?attr/textAppearanceListItem"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/list_image"
-        app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/list_image"
+            android:layout_width="124dp"
+            android:layout_height="93dp"
+            android:layout_weight="1"
+            android:scaleType="fitXY"
+            app:srcCompat="@drawable/pict3" />
 
-    <TextView
-        android:id="@+id/list_city_text"
-        android:layout_width="297dp"
-        android:layout_height="48dp"
-        android:layout_margin="@dimen/text_margin"
-        android:layout_marginTop="7dp"
-        android:layout_weight="1"
-        android:text="Brooklyn"
-        android:textAppearance="?attr/textAppearanceListItem"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/list_image"
-        app:layout_constraintTop_toBottomOf="@+id/list_type_text" />
+        <LinearLayout
+            android:id="@+id/list_vertical_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="8"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/list_price_text"
-        android:layout_width="541dp"
-        android:layout_height="41dp"
-        android:layout_margin="@dimen/text_margin"
-        android:layout_weight="1"
-        android:text="$41,480.120"
-        android:textColor="@color/colorAccent"
-        android:textSize="36sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/list_image"
-        app:layout_constraintTop_toBottomOf="@+id/list_city_text" />
+            <TextView
+                android:id="@+id/list_type_text"
+                android:layout_width="633dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|start"
+                android:layout_marginStart="15dp"
+                android:layout_weight="1"
+                android:text="Duplex"
+                android:textAlignment="gravity"
+                android:textAppearance="?attr/textAppearanceListItem"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/list_city_text"
+                android:layout_width="632dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|start"
+                android:layout_marginStart="15dp"
+                android:layout_weight="1"
+                android:text="Brooklyn"
+                android:textAlignment="gravity"
+                android:textAppearance="?attr/textAppearanceListItem"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/list_price_text"
+                android:layout_width="630dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|start"
+                android:layout_marginStart="15dp"
+                android:layout_weight="1"
+                android:text="$41,480.120"
+                android:textAlignment="gravity"
+                android:textColor="@color/colorAccent"
+                android:textSize="24sp" />
+        </LinearLayout>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
