--- a/app/src/main/res/layout/fragment_create_estate.xml
+++ b/app/src/main/res/layout/fragment_create_estate.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent">
 
     <ScrollView
-        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -43,13 +42,13 @@
                     android:textAlignment="center"
                     android:textStyle="bold" />
 
-                <TextView
+                <EditText
                     android:id="@+id/details_type_text"
                     style="@style/details_text_style"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Loft" />
+                    android:hint="Loft" />
 
                 <TextView
                     android:id="@+id/details_statut_title"
@@ -59,13 +58,13 @@
                     android:layout_weight="1"
                     android:text="@string/details_statut_title" />
 
-                <TextView
+                <EditText
                     android:id="@+id/details_statut_text"
                     style="@style/details_text_style"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="On sale!" />
+                    android:hint="On sale!" />
             </LinearLayout>
 
             <Space
@@ -85,13 +84,13 @@
                     android:layout_weight="1"
                     android:text="@string/details_price_title" />
 
-                <TextView
+                <EditText
                     android:id="@+id/details_price_text"
                     style="@style/details_text_style"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="$10,000.000" />
+                    android:hint="$10,000.000" />
             </LinearLayout>
 
             <Space
@@ -109,16 +108,27 @@
                 android:layout_width="match_parent"
                 android:layout_height="10dp" />
 
-            <TextView
+            <EditText
                 android:id="@+id/details_address_text"
                 style="@style/details_text_style2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="15 street, montain - NY 10050" />
+                android:hint="15 street, montain - NY 10050" />
 
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="40dp" />
+
+            <TextView
+                android:id="@+id/details_images_title"
+                style="@style/Text_title_style"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/details_images_title" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="15dp" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/details_pics_recyclerview"
@@ -129,6 +139,33 @@
                 app:layoutManager="LinearLayoutManager"
                 tools:context=".controler.DetailsFragment"
                 tools:listitem="@layout/details_fragment_item" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="15dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/floatingActionButton7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    app:srcCompat="@drawable/ic_baseline_remove_24" />
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/floatingActionButton6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    app:srcCompat="@drawable/add_black_24dp" />
+            </LinearLayout>
 
             <Space
                 android:layout_width="match_parent"
@@ -154,12 +191,12 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <TextView
+                    <EditText
                         android:id="@+id/details_description_text"
                         style="@style/details_text_style2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Beautiful space, agreable..." />
+                        android:hint="Beautiful space, agreable..." />
 
                 </LinearLayout>
             </ScrollView>
@@ -181,13 +218,13 @@
                     android:layout_weight="1"
                     android:text="@string/details_surface_title" />
 
-                <TextView
+                <EditText
                     android:id="@+id/details_surface_text"
                     style="@style/details_text_style"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="300 m2" />
+                    android:hint="300 m2" />
 
                 <TextView
                     android:id="@+id/details_number_of_rooms_title"
@@ -197,13 +234,13 @@
                     android:layout_weight="1"
                     android:text="@string/details_number_of_rooms_title" />
 
-                <TextView
+                <EditText
                     android:id="@+id/details_number_of_rooms_text"
                     style="@style/details_text_style"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="15" />
+                    android:hint="15" />
             </LinearLayout>
 
             <Space
@@ -221,12 +258,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="20dp" />
 
-            <TextView
+            <EditText
                 android:id="@+id/details_points_of_interests_text"
                 style="@style/details_text_style2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="School, booling, Museum, Restaurants, ..." />
+                android:hint="School, booling, Museum, Restaurants, ..." />
 
             <Space
                 android:layout_width="match_parent"
@@ -245,13 +282,13 @@
                     android:layout_weight="1"
                     android:text="@string/details_publication_date_title" />
 
-                <TextView
+                <EditText
                     android:id="@+id/details_publication_date_text"
                     style="@style/details_text_style"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="04/ 10/ 2019" />
+                    android:hint="04/ 10/ 2019" />
 
                 <TextView
                     android:id="@+id/details_sold_date_title"
@@ -261,13 +298,13 @@
                     android:layout_weight="1"
                     android:text="@string/details_sold_date_title" />
 
-                <TextView
+                <EditText
                     android:id="@+id/details_sold_date_text"
                     style="@style/details_text_style"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="10/ 11/ 2020" />
+                    android:hint="10/ 11/ 2020" />
             </LinearLayout>
 
             <Space
@@ -287,42 +324,29 @@
                     android:layout_weight="1"
                     android:text="@string/details_agent_name_title" />
 
-                <TextView
+                <EditText
                     android:id="@+id/details_agent_name_text"
                     style="@style/details_text_style"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Billy bob skippy" />
+                    android:hint="Billy bob skippy" />
             </LinearLayout>
 
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="30dp" />
 
-            <fragment
-                android:id="@+id/map"
-                android:name="com.google.android.gms.maps.MapFragment"
+            <Button
+                android:id="@+id/submit_button"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
-                app:cameraZoom="13"
-                app:liteMode="true"
-                app:mapType="normal" />
+                android:layout_height="wrap_content"
+                android:text="@string/create_submit_button" />
 
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="40dp" />
 
         </LinearLayout>
     </ScrollView>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/estateDetailsFloatingBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.92"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.93"
-        app:srcCompat="@drawable/create_black_36dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
