--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/Text_title_style"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -115,6 +115,29 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="15 street, montain - NY 10050" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+
+            <TextView
+                android:id="@+id/details_city_title"
+                style="@style/Text_title_style"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/details_city_title"
+                android:textAlignment="center" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+
+            <TextView
+                android:id="@+id/details_city_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Brooklyn"
+                android:textAlignment="center" />
 
             <Space
                 android:layout_width="match_parent"
@@ -305,9 +328,9 @@
                 android:name="com.google.android.gms.maps.MapFragment"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
-                app:cameraZoom="13"
-                app:liteMode="true"
-                app:mapType="normal" />
+                android:cameraZoom="13"
+                android:liteMode="true"
+                android:mapType="normal" />
 
 
         </LinearLayout>
