--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -327,10 +327,7 @@
                 android:id="@+id/map"
                 android:name="com.google.android.gms.maps.MapFragment"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:cameraZoom="13"
-                android:liteMode="true"
-                android:mapType="normal" />
+                android:layout_height="300dp" />
 
 
         </LinearLayout>
