--- a/app/src/main/res/layout/activity_create_estate.xml
+++ b/app/src/main/res/layout/activity_create_estate.xml
@@ -25,6 +25,70 @@
 
             <Space
                 android:layout_width="match_parent"
+                android:layout_height="20dp" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/details_pics_recyclerview"
+                android:name="com.openclassrooms.realestatemanager.controler.CreateEstateActivity"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:scrollbars="vertical"
+                app:layoutManager="LinearLayoutManager"
+                tools:context=".controler.DetailsFragment"
+                tools:listitem="@layout/details_fragment_item" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="15dp" />
+
+            <TextView
+                android:id="@+id/details_images_title"
+                style="@style/Text_title_style"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/details_images_title" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="15dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <Space
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+
+                <Button
+                    android:id="@+id/details_add_gallery_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:onClick="configureAddFromGalleryButton"
+                    android:text="@string/details_add_gallery_button" />
+
+                <Button
+                    android:id="@+id/details_add_camera_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:onClick="configureTakeAPictureButton"
+                    android:text="@string/details_add_camera_button" />
+
+                <Space
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+
+            </LinearLayout>
+
+            <Space
+                android:layout_width="match_parent"
                 android:layout_height="30dp" />
 
             <LinearLayout
@@ -58,11 +122,12 @@
                     android:layout_weight="1"
                     android:text="@string/details_statut_title" />
 
-                <EditText
-                    android:id="@+id/details_statut_text"
+                <Spinner
+                    android:id="@+id/details_statut_spinner"
                     style="@style/details_text_style"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:layout_weight="1"
                     android:hint="On sale!" />
             </LinearLayout>
@@ -90,7 +155,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:hint="$10,000.000" />
+                    android:hint="$10,000.000"
+                    android:inputType="number"
+                    android:singleLine="true" />
             </LinearLayout>
 
             <Space
@@ -117,55 +184,27 @@
 
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="40dp" />
+                android:layout_height="10dp" />
 
             <TextView
-                android:id="@+id/details_images_title"
+                android:id="@+id/details_city_title"
                 style="@style/Text_title_style"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/details_images_title" />
+                android:text="@string/details_city_title"
+                android:textAlignment="center" />
 
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="15dp" />
+                android:layout_height="10dp" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/details_pics_recyclerview"
-                android:name="com.openclassrooms.realestatemanager.controler.DetailsFragment"
+            <EditText
+                android:id="@+id/details_city_text"
+                style="@style/details_text_style2"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                app:layoutManager="LinearLayoutManager"
-                tools:context=".controler.DetailsFragment"
-                tools:listitem="@layout/details_fragment_item" />
-
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="15dp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/floatingActionButton7"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:clickable="true"
-                    app:srcCompat="@drawable/ic_baseline_remove_24" />
-
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/floatingActionButton6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:clickable="true"
-                    app:srcCompat="@drawable/add_black_24dp" />
-            </LinearLayout>
+                android:layout_height="wrap_content"
+                android:hint="Brooklyn"
+                android:textAlignment="center" />
 
             <Space
                 android:layout_width="match_parent"
@@ -224,7 +263,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:hint="300 m2" />
+                    android:hint="300 m2"
+                    android:inputType="number"
+                    android:singleLine="true" />
 
                 <TextView
                     android:id="@+id/details_number_of_rooms_title"
@@ -240,7 +281,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:hint="15" />
+                    android:hint="15"
+                    android:inputType="number"
+                    android:singleLine="true" />
             </LinearLayout>
 
             <Space
@@ -282,13 +325,16 @@
                     android:layout_weight="1"
                     android:text="@string/details_publication_date_title" />
 
-                <EditText
+                <TextView
                     android:id="@+id/details_publication_date_text"
                     style="@style/details_text_style"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:hint="04/ 10/ 2019" />
+                    android:hint="04/ 10/ 2019"
+                    android:inputType="date"
+                    android:singleLine="true"
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/details_sold_date_title"
@@ -298,13 +344,15 @@
                     android:layout_weight="1"
                     android:text="@string/details_sold_date_title" />
 
-                <EditText
+                <TextView
                     android:id="@+id/details_sold_date_text"
                     style="@style/details_text_style"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:hint="10/ 11/ 2020" />
+                    android:inputType="date"
+                    android:singleLine="true"
+                    android:textSize="18sp" />
             </LinearLayout>
 
             <Space
@@ -341,6 +389,7 @@
                 android:id="@+id/submit_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="configureCreateButton"
                 android:text="@string/create_submit_button" />
 
             <Space
