--- a/app/src/main/res/layout/activity_create_estate.xml
+++ b/app/src/main/res/layout/activity_create_estate.xml
@@ -69,6 +69,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:background="@drawable/rounded_corners"
                     android:onClick="configureAddFromGalleryButton"
                     android:text="@string/details_add_gallery_button" />
 
@@ -77,6 +78,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:background="@drawable/rounded_corners"
                     android:onClick="configureTakeAPictureButton"
                     android:text="@string/details_add_camera_button" />
 
@@ -106,7 +108,7 @@
                     android:textAlignment="center"
                     android:textStyle="bold" />
 
-                <EditText
+                <AutoCompleteTextView
                     android:id="@+id/details_type_text"
                     style="@style/details_text_style"
                     android:layout_width="wrap_content"
@@ -175,7 +177,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="10dp" />
 
-            <EditText
+            <AutoCompleteTextView
                 android:id="@+id/details_address_text"
                 style="@style/details_text_style2"
                 android:layout_width="match_parent"
@@ -186,25 +188,43 @@
                 android:layout_width="match_parent"
                 android:layout_height="10dp" />
 
-            <TextView
-                android:id="@+id/details_city_title"
-                style="@style/Text_title_style"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/details_city_title"
-                android:textAlignment="center" />
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:id="@+id/details_city_title"
+                    style="@style/Text_title_style"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/details_city_title"
+                    android:textAlignment="center" />
+
+                <AutoCompleteTextView
+                    android:id="@+id/details_city_text"
+                    style="@style/details_text_style2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:hint="Brooklyn"
+                    android:textAlignment="textStart" />
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+            </LinearLayout>
 
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="10dp" />
-
-            <EditText
-                android:id="@+id/details_city_text"
-                style="@style/details_text_style2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Brooklyn"
-                android:textAlignment="center" />
 
             <Space
                 android:layout_width="match_parent"
@@ -290,19 +310,46 @@
                 android:layout_width="match_parent"
                 android:layout_height="20dp" />
 
-            <TextView
-                android:id="@+id/details_points_of_interests_title"
-                style="@style/Text_title_style"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/details_points_of_interest_title" />
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/details_points_of_interests_title"
+                    style="@style/Text_title_style"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/details_points_of_interest_title" />
+
+                <AutoCompleteTextView
+                    android:id="@+id/details_points_of_interests_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3" />
+
+                <Button
+                    android:id="@+id/button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/rounded_corners"
+                    android:minWidth="48dp"
+                    android:minHeight="12dp"
+                    android:onClick="addNewChip"
+                    android:text="+"
+                    android:textSize="30sp" />
+
+            </LinearLayout>
 
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="20dp" />
+                android:layout_height="10dp" />
 
-            <EditText
-                android:id="@+id/details_points_of_interests_text"
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/details_points_of_interests_chipgroup"
                 style="@style/details_text_style2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -350,6 +397,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:hint="------"
                     android:inputType="date"
                     android:singleLine="true"
                     android:textSize="18sp" />
@@ -389,7 +437,8 @@
                 android:id="@+id/submit_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:onClick="configureCreateButton"
+                android:background="@drawable/rounded_corners"
+                android:onClick="configureValideButton"
                 android:text="@string/create_submit_button" />
 
             <Space
