--- a/app/src/main/res/layout-land/activity_loan_simulator.xml
+++ b/app/src/main/res/layout-land/activity_loan_simulator.xml
@@ -2,13 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +38,8 @@
                     android:layout_height="wrap_content"
                     android:inputType="number"
                     android:numeric="integer"
-                    android:text="100000" />
+                    android:text="100000"
+                    tools:text="0" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -77,7 +79,8 @@
                     android:layout_height="wrap_content"
                     android:inputType="number"
                     android:numeric="integer"
-                    android:text="0" />
+                    android:text="0"
+                    tools:text="0" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
